--- a/views/index.ejs
+++ b/views/index.ejs
@@ -174,16 +174,14 @@
           <label for="desiredStyle">Choose the desired style...</label>
           <select name="desiredStyle" id="desiredStyle">
             <option value="" disabled selected>Select a style</option>
-            <option value="realistic">Realistic</option>
-            <option value="pixelart">Pixel Art</option>
             <option value="sketch">Sketch</option>
+            <option value="colorsketch">Color Sketch</option>
             <option value="oilpainting">Oil Painting</option>
             <option value="comic">Comic</option>
             <option value="abstract">Abstract</option>
-            <option value="pastel">Pastel</option>
-            <option value="charcoal">Charcoal</option>
-            <option value="vintage">Vintage</option>
+            <option value="stylization">Stylization</option>
             <option value="impressionist">Impressionist</option>
+            <option value="grayscale">Grayscale</option>
           </select>
         </div>
 
