--- a/views/index.ejs
+++ b/views/index.ejs
@@ -146,8 +146,8 @@
         </select>
 
         <div id="typeDropdown" class="hidden">
-          <label for="desiredType">Choose the desired type...</label>
-          <select name="desiredType" id="desiredType">
+          <label for="target_type">Choose the desired type...</label>
+          <select name="target_type" id="target_type">
             <option value="" disabled selected>Select a type</option>
             <option value="normal">Normal</option>
             <option value="fire">Fire</option>
@@ -171,8 +171,8 @@
         </div>
 
         <div id="styleDropdown" class="hidden">
-          <label for="desiredStyle">Choose the desired style...</label>
-          <select name="desiredStyle" id="desiredStyle">
+          <label for="target_format">Choose the desired style...</label>
+          <select name="target_format" id="target_format">
             <option value="" disabled selected>Select a style</option>
             <option value="sketch">Sketch</option>
             <option value="colorsketch">Color Sketch</option>
